se agrega localstorage

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
     </header>
     <main class="container">
         <div class="barra-busqueda my-5">
-            <input type="text" id="barra-busqueda" placeholder="Buscar por marca o modelo">
-            <button type="button" class="btn btn-outline-warning" id="btn-buscar">Buscar</button>
-            <div id="resultado-busqueda" class="bg-dark text-warning"></div>
+          <h2>Ingrese el vehiculo que esta buscando por marca o modelo.</h2>
+          <input type="text" id="barra-busqueda" placeholder="Buscar">
+          <button type="button" class="btn btn-outline-warning" id="btn-buscar">Buscar</button>
+          <div id="resultado-busqueda" class="bg-dark text-warning"></div>
         </div>
     </main>
     <script src="./js/bootstrap.bundle.min.js"></script>
