--- a/index.html
+++ b/index.html
@@ -4,39 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--ESTILOS BOOSTRAP-->
+    <!-- bootstrap -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <!--ESTILOS PROPIOS-->
-    <link rel="stylesheet" href="./css/style.css">
-    <title>JavaScript</title>
+    <!-- styles propios -->
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>StarCar</title>
 </head>
-<body class="bg-secondary">
-    <header class="bg-dark w-100">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container-fluid header__nav__row">
-              <a class="navbar-brand fs-1 fw-bold nav__logo" href="#">StarCars</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              <!-- </button>
-              <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="#">Inicio</a>
-                  </li>
-                </ul>
-              </div> -->
-            </div>
-          </nav>
-    </header>
-    <main class="container">
-        <div class="barra-busqueda my-5">
-          <h2>Ingrese el vehiculo que esta buscando por marca o modelo.</h2>
-          <input type="text" id="barra-busqueda" placeholder="Buscar">
-          <button type="button" class="btn btn-outline-warning" id="btn-buscar">Buscar</button>
-          <div id="resultado-busqueda" class="bg-dark text-warning"></div>
+<body class="bg-color">
+    <header class="header">
+      <nav class="navbar navbar-expand-lg navbar-dark header__nav">
+        <div class="container-fluid header__nav__row">
+          <a class="navbar-brand fs-1 fw-bold" href="../index.html">StarCar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse header__nav__row__ul" id="navbarSupportedContent">
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link fw-bold me-5 px-1 py-1" id="nav__link" aria-current="page" href="./index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bold p-2 nav__link-login" id="nav__link" aria-current="page" href="./pages/login.html">Iniciar Sesión</a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </nav>
+    </header>
+    <hr class="m-0 py-1 text-light"> <!--linea divisoria-->
+    <main class="container">
+      <!-- barra de busqueda  -->
+      <div class="py-3 main__search d-flex justify-content-center">
+        <form class="d-flex main__search__form" role="search">
+          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search" id="barra-busqueda">
+          <button class="btn-search btn" type="button" id="btn-buscar">Buscar</button>
+        </form>
+      </div>
+      <!-- resultados de las card  -->
+      <div id="resultado-busqueda" class="row justify-content-center"></div>
     </main>
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
