--- a/pages/signin.html
+++ b/pages/signin.html
@@ -1,54 +1,92 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registro</title>
     <!-- bootstrap -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <!-- Estilos propios -->
-    <link rel="stylesheet" type="text/css" href="../css/login.css">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
-</head>
-<body class="bg-color">
-  <header class="header">
-    <nav class="navbar navbar-expand-lg navbar-dark header__nav">
-      <div class="container-fluid header__nav__row">
-        <a class="navbar-brand fs-1 fw-bold" href="../index.html">StarCar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse header__nav__row__ul" id="navbarSupportedContent">
-          <ul class="navbar-nav mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link fw-bold me-5 px-1 py-1" id="nav__link" aria-current="page" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fw-bold p-2 nav__link-login" id="nav__link" aria-current="page" href="./login.html">Iniciar Sesión</a>
-            </li>
-          </ul>
+    <link rel="stylesheet" type="text/css" href="../css/login.css" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
+  </head>
+  <body class="bg-color">
+    <header class="header">
+      <nav class="navbar navbar-expand-lg navbar-dark header__nav">
+        <div class="container-fluid header__nav__row">
+          <a class="navbar-brand fs-1 fw-bold" href="../index.html">StarCar</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse header__nav__row__ul"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link fw-bold me-5 px-1 py-1"
+                  id="nav__link"
+                  aria-current="page"
+                  href="../index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link fw-bold p-2 nav__link-login"
+                  id="nav__link"
+                  aria-current="page"
+                  href="./login.html"
+                  >Iniciar Sesión</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
+      </nav>
+    </header>
+    <hr class="m-0 py-1 text-light" />
+    <!--linea divisoria-->
+    <main>
+      <div class="body__form">
+        <h2 class="h2">Registro.</h2>
+        <form id="form">
+          <input
+            class="inputs"
+            type="text"
+            id="username"
+            placeholder="Nombre de usuario"
+            required
+          />
+          <input
+            class="inputs"
+            type="password"
+            id="password"
+            placeholder="Contraseña"
+            required
+          />
+          <!-- checkbox -->
+          <input type="checkbox" id="saveData" />
+          <label class="text-light" for="saveData"
+            >Guardar datos en el navegador</label
+          >
+          <!-- buttons -->
+          <button class="btn__submit" type="submit">Registrar</button>
+        </form>
+        <p id="message"></p>
       </div>
-    </nav>
-  </header>
-  <hr class="m-0 py-1 text-light"> <!--linea divisoria-->
-  <main>
-    <div class="body__form">
-      <h2 class="h2">Registro.</h2>
-      <form id="form">
-        <input class="inputs" type="text" id="username" placeholder="Nombre de usuario" required>
-        <input class="inputs" type="password" id="password" placeholder="Contraseña" required>
-        <!-- checkbox -->
-        <input type="checkbox" id="saveData">
-        <label class="text-light" for="saveData">Guardar datos en el navegador</label>
-        <!-- buttons -->
-        <button class="btn__submit type="submit">Registrar</button>
-      </form>
-      <p id="message"></p>
-    </div>
-  </main>
-  <script src="./js/bootstrap.js"></script>
-  <script src="../js/login.js"></script>
-</body>
+    </main>
+    <script src="./js/bootstrap.js"></script>
+    <script src="../js/login.js"></script>
+  </body>
 </html>
