Se guarda el codigo ordenado y funcionando, con un detalle, las funciones register y login interferien en la linea ocasionando que si la funcion register cumpla su aplicacion pero al momento de verificar esos datos guardados con la funcion de login, interfiere con el llamado de la funcion register. Al comentar el llamado, la funcion cumple su rol de verificar datos guardados en el storage. Dejo pendiente solucionar ese conflicto.

--- a/pages/login.html
+++ b/pages/login.html
@@ -60,7 +60,7 @@
     <main>
       <div class="body__form">
         <h2 class="h2">Iniciar Sesión.</h2>
-        <form id="form">
+        <form id="form__login">
           <input
             class="inputs"
             type="text"
@@ -83,9 +83,10 @@
           <button class="btn__submit" type="submit">Iniciar sesión</button>
         </form>
         <p id="message"></p>
+        <p class="text-light" id="messageInvalid"></p>
       </div>
     </main>
-    <script src="./js/bootstrap.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="../js/login.js"></script>
   </body>
 </html>
