--- a/pages/signin.html
+++ b/pages/signin.html
@@ -60,7 +60,7 @@
     <main>
       <div class="body__form">
         <h2 class="h2">Registro.</h2>
-        <form id="form">
+        <form id="form__signin">
           <input
             class="inputs"
             type="text"
@@ -77,8 +77,8 @@
           />
           <!-- checkbox -->
           <input type="checkbox" id="saveData" />
-          <label class="text-light" for="saveData"
-            >Guardar datos en el navegador</label
+          <label class="text-light small" for="saveData"
+            >Guardar datos en el navegador (Local Storage)</label
           >
           <!-- buttons -->
           <button class="btn__submit" type="submit">Registrar</button>
@@ -86,7 +86,7 @@
         <p id="message"></p>
       </div>
     </main>
-    <script src="./js/bootstrap.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="../js/login.js"></script>
   </body>
 </html>
