Se actualizo la version de Bootstrap

--- a/index.html
+++ b/index.html
@@ -58,24 +58,28 @@
     <!--linea divisoria-->
     <main class="container">
       <!-- barra de busqueda  -->
-      <div class="py-3 main__search d-flex justify-content-center">
-        <form class="d-flex main__search__form" role="search">
+      <div class="py-5 main__search d-flex justify-content-center">
+        <div class="input-group mb-3">
           <input
-            class="form-control me-2"
-            type="search"
+            type="text"
+            class="form-control"
             placeholder="Buscar"
-            aria-label="Search"
+            aria-label="Buscar"
             id="barra-busqueda"
           />
-          <button class="btn-search btn" type="button" id="btn-buscar">
+          <button
+            class="btn btn-outline-secondary btn-search"
+            type="button"
+            id="btn-buscar"
+          >
             Buscar
           </button>
-        </form>
+        </div>
       </div>
       <!-- resultados de las card  -->
       <div id="resultado-busqueda" class="row justify-content-center"></div>
     </main>
-    <script src="./js/bootstrap.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
