--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       <!-- resultados de las card  -->
       <div id="resultado-busqueda" class="row justify-content-center"></div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
   </body>
